--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -484,7 +484,7 @@
         width: 100%;
       }
   }
-  .field-name-field-categories {
+  .field--name-field-categories {
     margin-top: 1em;
     font-weight: bold;
   }
